# Spring15_UIE_exercise

./: CMakeLists.txt  Gesture.hpp  OneDollarRecognizer.hpp  Questions.odt  README.md  main.cpp
